--- a/addons/csi-azurefile/csi-azurefile.yaml
+++ b/addons/csi-azurefile/csi-azurefile.yaml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-controller-sa
   namespace: kube-system
 ---
@@ -21,8 +21,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-node-sa
   namespace: kube-system
 ---
@@ -35,8 +35,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-external-attacher-role
 rules:
   - apiGroups:
@@ -106,8 +106,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-external-provisioner-role
 rules:
   - apiGroups:
@@ -201,8 +201,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-external-resizer-role
 rules:
   - apiGroups:
@@ -262,8 +262,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-external-snapshotter-role
 rules:
   - apiGroups:
@@ -331,8 +331,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-controller-secret-role
 rules:
   - apiGroups:
@@ -352,8 +352,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-node-secret-role
 rules:
   - apiGroups:
@@ -372,8 +372,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-csi-attacher-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -393,8 +393,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-csi-provisioner-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -414,8 +414,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-csi-resizer-role
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -435,8 +435,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: azurefile-csi-snapshotter-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -456,8 +456,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-controller-secret-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -477,8 +477,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-node-secret-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -499,8 +499,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-controllermanager
   namespace: kube-system
 spec:
@@ -521,8 +521,8 @@ spec:
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/name: azurefile-csi-driver
         app.kubernetes.io/part-of: azurefile-csi-driver
-        app.kubernetes.io/version: 1.33.2
-        helm.sh/chart: azurefile-csi-driver-1.33.2
+        app.kubernetes.io/version: 1.34.0
+        helm.sh/chart: azurefile-csi-driver-1.34.0
     spec:
       affinity:
         nodeAffinity:
@@ -741,8 +741,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: csi-azurefile-nodemanager
   namespace: kube-system
 spec:
@@ -760,8 +760,8 @@ spec:
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/name: azurefile-csi-driver
         app.kubernetes.io/part-of: azurefile-csi-driver
-        app.kubernetes.io/version: 1.33.2
-        helm.sh/chart: azurefile-csi-driver-1.33.2
+        app.kubernetes.io/version: 1.34.0
+        helm.sh/chart: azurefile-csi-driver-1.34.0
     spec:
       affinity:
         nodeAffinity:
@@ -882,6 +882,8 @@ spec:
               name: azure-cred
             - mountPath: /dev
               name: device-dir
+            - mountPath: /var/log/
+              name: log-dir
       dnsPolicy: Default
       hostNetwork: true
       hostPID: true
@@ -901,6 +903,8 @@ spec:
               value: /var/lib/kubelet
             - name: MIGRATE_K8S_REPO
               value: "false"
+            - name: ENABLE_MI_AUTH
+              value: "true"
           image: '{{ .InternalImages.Get "AzureFileCSI" }}'
           imagePullPolicy: IfNotPresent
           name: install-azurefile-proxy
@@ -914,6 +918,9 @@ spec:
               name: host-usr
             - mountPath: /host/etc
               name: host-etc
+            - mountPath: /var/lib/kubelet/
+              mountPropagation: Bidirectional
+              name: mountpoint-dir
       nodeSelector:
         kubernetes.io/os: linux
       priorityClassName: system-node-critical
@@ -950,6 +957,10 @@ spec:
             path: /dev
             type: Directory
           name: device-dir
+        - hostPath:
+            path: /var/log/
+            type: DirectoryOrCreate
+          name: log-dir
   updateStrategy:
     rollingUpdate:
       maxUnavailable: 1
@@ -959,16 +970,16 @@ apiVersion: storage.k8s.io/v1
 kind: CSIDriver
 metadata:
   annotations:
-    csiDriver: v1.33.2
-    snapshot: v8.2.1
+    csiDriver: v1.34.0
+    snapshot: v8.3.0
   labels:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/instance: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: azurefile-csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
-    app.kubernetes.io/version: 1.33.2
-    helm.sh/chart: azurefile-csi-driver-1.33.2
+    app.kubernetes.io/version: 1.34.0
+    helm.sh/chart: azurefile-csi-driver-1.34.0
   name: file.csi.azure.com
 spec:
   attachRequired: false
