--- a/addons/csi-hetzner/hcloud-csi.yml
+++ b/addons/csi-hetzner/hcloud-csi.yml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: hcloud-csi
-    helm.sh/chart: hcloud-csi-2.16.0
+    helm.sh/chart: hcloud-csi-2.17.0
   name: hcloud-csi-controller
   namespace: kube-system
 ---
@@ -19,7 +19,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: hcloud-csi
-    helm.sh/chart: hcloud-csi-2.16.0
+    helm.sh/chart: hcloud-csi-2.17.0
   name: hcloud-csi-controller
 rules:
   - apiGroups:
@@ -161,7 +161,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: hcloud-csi
-    helm.sh/chart: hcloud-csi-2.16.0
+    helm.sh/chart: hcloud-csi-2.17.0
   name: hcloud-csi-controller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -181,7 +181,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: hcloud-csi
-    helm.sh/chart: hcloud-csi-2.16.0
+    helm.sh/chart: hcloud-csi-2.17.0
   name: hcloud-csi-controller
   namespace: kube-system
 spec:
@@ -200,7 +200,7 @@ spec:
         app.kubernetes.io/instance: hcloud-csi
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/name: hcloud-csi
-        helm.sh/chart: hcloud-csi-2.16.0
+        helm.sh/chart: hcloud-csi-2.17.0
     spec:
       affinity:
         nodeAffinity:
@@ -224,7 +224,9 @@ spec:
           volumeMounts:
             - mountPath: /run/csi
               name: socket-dir
-        - image: '{{ .InternalImages.Get "HetznerCSIResizer" }}'
+        - args:
+            - --feature-gates=RecoverVolumeExpansionFailure=false
+          image: '{{ .InternalImages.Get "HetznerCSIResizer" }}'
           imagePullPolicy: IfNotPresent
           name: csi-resizer
           resources:
@@ -310,7 +312,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: hcloud-csi
-    helm.sh/chart: hcloud-csi-2.16.0
+    helm.sh/chart: hcloud-csi-2.17.0
   name: hcloud-csi-node
   namespace: kube-system
 spec:
@@ -326,7 +328,7 @@ spec:
         app.kubernetes.io/instance: hcloud-csi
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/name: hcloud-csi
-        helm.sh/chart: hcloud-csi-2.16.0
+        helm.sh/chart: hcloud-csi-2.17.0
     spec:
       affinity:
         nodeAffinity:
