Update addons to support k8s 1.34
Signed-off-by: Archana Sawant <archupsawant@gmail.com>

--- a/addons/ccm-hetzner/ccm-hetzner.yaml
+++ b/addons/ccm-hetzner/ccm-hetzner.yaml
@@ -43,6 +43,7 @@ spec:
             - --allow-untagged-cloud
             - --cloud-provider=hcloud
             - --configure-cloud-routes=false
+            - --feature-gates=CloudControllerManagerWatchBasedRoutesReconciliation=false
             - --route-reconciliation-period=30s
             - --webhook-secure-port=0
             - --leader-elect=false
