test mc hostnetwork
Signed-off-by: Adonis Murati <adonismurati@gmail.com>

--- a/addons/machinecontroller/deployment-controller.yaml
+++ b/addons/machinecontroller/deployment-controller.yaml
@@ -36,6 +36,7 @@ spec:
         - key: "CriticalAddonsOnly"
           operator: Exists
       serviceAccountName: machine-controller
+      hostNetwork: true
       containers:
         - name: machine-controller
           image: "{{ .InternalImages.Get "MachineController" }}"
