--- a/addons/operating-system-manager/webhook.yaml
+++ b/addons/operating-system-manager/webhook.yaml
@@ -63,6 +63,7 @@ spec:
         - key: "node-role.kubernetes.io/control-plane"
           effect: NoSchedule
       serviceAccountName: operating-system-manager-webhook
+      hostNetwork: true
       containers:
         - image: "{{ .InternalImages.Get "OperatingSystemManager" }}"
           imagePullPolicy: IfNotPresent
