--- a/test/tests.yml
+++ b/test/tests.yml
@@ -88,23 +88,28 @@
     - name: aws_default_stable
     - name: aws_ubuntu_previous_lts
     - name: aws_flatcar_stable
-    - name: aws_rhel_stable
-    - name: aws_rockylinux_stable
     - name: azure_default_stable
     - name: azure_flatcar_stable
-    - name: azure_rhel_stable
-    - name: azure_rockylinux_stable
     - name: digitalocean_default_stable
-    - name: digitalocean_rockylinux_stable
     - name: gce_default_stable
     - name: hetzner_default_stable
-    - name: hetzner_rockylinux_stable
     - name: openstack_default_stable
     - name: openstack_flatcar_stable
-    - name: openstack_rhel_stable
-    - name: openstack_rockylinux_stable
     - name: vsphere_default_stable
     - name: vsphere_flatcar_stable
+
+- scenario: upgrade_containerd_external
+  initVersion: v1.32
+  upgradedVersion: v1.33
+  infrastructures:
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_rockylinux
+    - name: hetzner_rockylinux
+    - name: openstack_rhel
+    - name: openstack_rockylinux
 
 - scenario: upgrade_containerd_external
   initVersion: v1.33
@@ -113,23 +118,28 @@
     - name: aws_default_stable
     - name: aws_ubuntu_previous_lts
     - name: aws_flatcar_stable
-    - name: aws_rhel_stable
-    - name: aws_rockylinux_stable
     - name: azure_default_stable
     - name: azure_flatcar_stable
-    - name: azure_rhel_stable
-    - name: azure_rockylinux_stable
     - name: digitalocean_default_stable
-    - name: digitalocean_rockylinux_stable
     - name: gce_default_stable
     - name: hetzner_default_stable
-    - name: hetzner_rockylinux_stable
     - name: openstack_default_stable
     - name: openstack_flatcar_stable
-    - name: openstack_rhel_stable
-    - name: openstack_rockylinux_stable
     - name: vsphere_default_stable
     - name: vsphere_flatcar_stable
+
+- scenario: upgrade_containerd_external
+  initVersion: v1.33
+  upgradedVersion: v1.34
+  infrastructures:
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_rockylinux
+    - name: hetzner_rockylinux
+    - name: openstack_rhel
+    - name: openstack_rockylinux
 
 ###########################
 # ALTERNATIVE CNI PLUGINS #
@@ -279,21 +289,13 @@
   infrastructures:
     - name: aws_default_stable
     - name: aws_flatcar_stable
-    - name: aws_rhel_stable
-    - name: aws_rockylinux_stable
     - name: azure_default_stable
     - name: azure_flatcar_stable
-    - name: azure_rhel_stable
-    - name: azure_rockylinux_stable
     - name: digitalocean_default_stable
-    - name: digitalocean_rockylinux_stable
     - name: gce_default_stable
     - name: hetzner_default_stable
-    - name: hetzner_rockylinux_stable
     - name: openstack_default_stable
     - name: openstack_flatcar_stable
-    - name: openstack_rhel_stable
-    - name: openstack_rockylinux_stable
     - name: vsphere_default_stable
     - name: vsphere_flatcar_stable
 
@@ -303,23 +305,41 @@
   infrastructures:
     - name: aws_default_stable
     - name: aws_flatcar_stable
-    - name: aws_rhel_stable
-    - name: aws_rockylinux_stable
     - name: azure_default_stable
     - name: azure_flatcar_stable
-    - name: azure_rhel_stable
-    - name: azure_rockylinux_stable
     - name: digitalocean_default_stable
-    - name: digitalocean_rockylinux_stable
     - name: gce_default_stable
     - name: hetzner_default_stable
-    - name: hetzner_rockylinux_stable
     - name: openstack_default_stable
     - name: openstack_flatcar_stable
-    - name: openstack_rhel_stable
-    - name: openstack_rockylinux_stable
     - name: vsphere_default_stable
     - name: vsphere_flatcar_stable
+
+- scenario: upgrade_cilium_containerd_external
+  initVersion: v1.32
+  upgradedVersion: v1.33
+  infrastructures:
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_rockylinux
+    - name: hetzner_rockylinux
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+
+- scenario: upgrade_cilium_containerd_external
+  initVersion: v1.33
+  upgradedVersion: v1.34
+  infrastructures:
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_rockylinux
+    - name: hetzner_rockylinux
+    - name: openstack_rhel
+    - name: openstack_rockylinux
 
 ####################
 # CONFORMANCE TEST #
