Use InternalImages for backup restic and unattended upgrades addons
Signed-off-by: Archana Sawant <archupsawant@gmail.com>

--- a/addons/backups-restic/backups-restic.yaml
+++ b/addons/backups-restic/backups-restic.yaml
@@ -52,7 +52,7 @@ spec:
               path: /etc/kubernetes/pki
           initContainers:
           - name: snapshotter
-            image: {{ Registry "registry.k8s.io" }}/etcd:3.5.16-0
+            image: '{{ .InternalImages.Get "BackupResticSnapshotter" }}'
             imagePullPolicy: IfNotPresent
             command:
               - etcdctl
@@ -83,7 +83,7 @@ spec:
               readOnly: true
           containers:
           - name: uploader
-            image: {{ Registry "ghcr.io" }}/restic/restic:0.18.0
+            image: '{{ .InternalImages.Get "BackupResticUploader" }}'
             imagePullPolicy: IfNotPresent
             command:
             - /bin/sh
