--- a/addons/unattended-upgrades/fluo.yaml
+++ b/addons/unattended-upgrades/fluo.yaml
@@ -200,7 +200,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: '{{ Registry "ghcr.io" }}/flatcar/flatcar-linux-update-operator:v0.10.0-rc1'
+        image: '{{ .InternalImages.Get "UUFluo" }}'
         name: update-operator
       serviceAccountName: flatcar-linux-update-operator-sa
       tolerations:
@@ -251,7 +251,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: '{{ Registry "ghcr.io" }}/flatcar/flatcar-linux-update-operator:v0.10.0-rc1'
+        image: '{{ .InternalImages.Get "UUFluo" }}'
         name: update-agent
         securityContext:
           runAsUser: 0
