--- a/addons/csi-aws-ebs/aws-csi.yaml
+++ b/addons/csi-aws-ebs/aws-csi.yaml
@@ -901,6 +901,7 @@ spec:
         - name: socket-dir
           emptyDir: {}
 ---
+{{ $kubernetesVersion := semver .Config.Versions.Kubernetes }}
 # Source: aws-ebs-csi-driver/templates/csidriver.yaml
 apiVersion: storage.k8s.io/v1
 kind: CSIDriver
@@ -916,5 +917,7 @@ metadata:
 spec:
   attachRequired: true
   podInfoOnMount: false
+  {{ if ge $kubernetesVersion.Minor 33 }}
   nodeAllocatableUpdatePeriodSeconds: 10
+  {{ end }}
   fsGroupPolicy: File
